--- a/app/src/main/res/layout/activity_edit_nav_detail.xml
+++ b/app/src/main/res/layout/activity_edit_nav_detail.xml
@@ -5,6 +5,45 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/rlContact"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/selector_item_click_bg"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="联系人列表"
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
+
+    <RelativeLayout
+        android:id="@+id/rlAddContact"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/selector_item_click_bg"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="添加联系人"
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
     <RelativeLayout
         android:id="@+id/rlSetTag"
@@ -20,48 +59,6 @@
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#f6f6f6" />
-
-    <RelativeLayout
-        android:id="@+id/rlBindDevice"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@drawable/selector_item_click_bg"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="绑定设备"
-            android:textColor="@color/black6"
-            android:textSize="@dimen/sp15" />
-    </RelativeLayout>
-
-
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:background="#f6f6f6" />-->
-
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/rlAddContact"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="48dp"-->
-        <!--android:background="@drawable/selector_item_click_bg"-->
-        <!--android:gravity="center">-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="添加联系人"-->
-            <!--android:textColor="@color/black6"-->
-            <!--android:textSize="@dimen/sp15" />-->
-    <!--</RelativeLayout>-->
-
-
 
     <View
         android:layout_width="match_parent"
@@ -85,25 +82,25 @@
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
 
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:background="#f6f6f6" />-->
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/rlAddRemind"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="48dp"-->
-        <!--android:background="@drawable/selector_item_click_bg"-->
-        <!--android:gravity="center">-->
+    <RelativeLayout
+        android:id="@+id/rlAddRemind"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/selector_item_click_bg"
+        android:gravity="center">
 
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="设置提醒"-->
-            <!--android:textColor="@color/black6"-->
-            <!--android:textSize="@dimen/sp15" />-->
-    <!--</RelativeLayout>-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="设置提醒"
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+    </RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -123,7 +120,25 @@
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f6f6f6" />
 
+    <RelativeLayout
+        android:id="@+id/rlBindDevice"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/selector_item_click_bg"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="绑定设备"
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -140,36 +155,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="电子围栏列表"
+            android:text="电子围栏"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
 
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:background="#f6f6f6" />-->
-
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/rlAddEle"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="48dp"-->
-        <!--android:background="@drawable/selector_item_click_bg"-->
-        <!--android:gravity="center">-->
-
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="添加电子围栏"-->
-            <!--android:textColor="@color/black6"-->
-            <!--android:textSize="@dimen/sp15" />-->
-    <!--</RelativeLayout>-->
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#f6f6f6" />
+
     <RelativeLayout
-        android:id="@+id/rlContact"
+        android:id="@+id/rlAddEle"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@drawable/selector_item_click_bg"
@@ -178,8 +175,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="联系人列表"
+            android:text="添加电子围栏"
             android:textColor="@color/black6"
             android:textSize="@dimen/sp15" />
     </RelativeLayout>
+
 </LinearLayout>
