--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -123,6 +123,7 @@
 
 
             <View
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="@dimen/dp_8"
@@ -131,6 +132,7 @@
 
 
             <LinearLayout
+                android:visibility="gone"
                 android:id="@+id/layoutNearby"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
