--- a/app/src/main/res/layout/layout_custom_info_window.xml
+++ b/app/src/main/res/layout/layout_custom_info_window.xml
@@ -15,13 +15,15 @@
         android:orientation="horizontal">
 
         <TextView
+            android:paddingBottom="@dimen/dp_8"
+            android:paddingTop="@dimen/dp_8"
+            android:paddingLeft="@dimen/dp_2"
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dp_8"
             android:text="您的父亲在此处跌倒，请尽快前往处理!"
             android:textColor="#fc473f"
-            android:textSize="@dimen/sp15" />
+            android:textSize="@dimen/sp14" />
 
     </LinearLayout>
 
