--- a/app/src/main/res/layout/activity_device_bind.xml
+++ b/app/src/main/res/layout/activity_device_bind.xml
@@ -13,15 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="36dp"
         android:gravity="center"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/ivScan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
             android:src="@mipmap/icon_scan_device" />
 
         <TextView
@@ -37,6 +37,7 @@
     <include layout="@layout/layout_divider_line" />
 
     <LinearLayout
+        android:layout_marginBottom="@dimen/dp_48"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginStart="@dimen/dp_16"
@@ -81,7 +82,8 @@
         android:id="@+id/btnBind"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        android:layout_margin="@dimen/dp_16"
+        android:layout_marginStart="@dimen/dp_16"
+        android:layout_marginEnd="@dimen/dp_16"
         android:background="@drawable/shape_button_bg"
         android:text="绑定"
         android:textColor="@color/white"
