--- a/app/src/main/res/layout/activity_input_msg.xml
+++ b/app/src/main/res/layout/activity_input_msg.xml
@@ -19,4 +19,11 @@
         android:textColorHint="@color/black9"
         android:textSize="@dimen/sp15" />
 
+    <TextView
+        android:id="@+id/tvDescription"
+        android:visibility="gone"
+        android:layout_margin="@dimen/dp_8"
+        android:text="@string/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
