--- a/app/src/main/res/layout/layout_custom_info_window.xml
+++ b/app/src/main/res/layout/layout_custom_info_window.xml
@@ -21,7 +21,7 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="您的父亲在此处跌倒，请尽快前往处理!"
+            android:text=""
             android:textColor="#fc473f"
             android:textSize="@dimen/sp14" />
 
