--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -138,6 +138,7 @@
             android:textSize="15sp" />
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/llAgreement"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
