电子围栏增加精度选择

--- a/app/src/main/res/layout/activity_elefence_add.xml
+++ b/app/src/main/res/layout/activity_elefence_add.xml
@@ -7,6 +7,42 @@
 
     <include layout="@layout/layout_title_bar" />
 
+    <LinearLayout
+        android:id="@+id/llRange"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingStart="@dimen/dp_8"
+        android:paddingEnd="@dimen/dp_8">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_ele_add" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_8"
+            android:layout_marginEnd="@dimen/dp_8"
+            android:layout_weight="1"
+            android:text="增加电子围栏"
+            android:textColor="@color/black6"
+            android:textSize="@dimen/sp15" />
+
+        <TextView
+            android:id="@+id/tvRange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="默认3km" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#f6f6f9" />
 
     <LinearLayout
         android:layout_width="match_parent"
