--- a/app/src/main/res/layout/item_family_member.xml
+++ b/app/src/main/res/layout/item_family_member.xml
@@ -51,12 +51,29 @@
 
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/imgEdit"
+    <LinearLayout
+        android:id="@+id/llEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="8dp"
-        android:padding="@dimen/dp_8"
-        android:src="@mipmap/icon_edit" />
+        android:layout_marginEnd="6dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+
+        <ImageView
+            android:id="@+id/imgEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_edit" />
+
+        <TextView
+            android:id="@+id/textEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="更多功能"
+            android:textSize="@dimen/sp15" />
+    </LinearLayout>
+
 </LinearLayout>
