--- a/app/src/main/res/layout/layout_home_tab.xml
+++ b/app/src/main/res/layout/layout_home_tab.xml
@@ -21,6 +21,7 @@
         android:textSize="@dimen/sp12" />
 
     <RadioButton
+        android:visibility="gone"
         android:id="@+id/radioButton1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
