--- a/app/src/main/res/layout/activity_member_detail.xml
+++ b/app/src/main/res/layout/activity_member_detail.xml
@@ -395,7 +395,16 @@
                 android:text="保存"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp15" />
-
+            <Button
+                android:layout_marginBottom="@dimen/dp_16"
+                android:id="@+id/btnDelete"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp_8"
+                android:background="@drawable/shape_unbind_device_bg"
+                android:text="删除"
+                android:textColor="@color/white"
+                android:textSize="@dimen/sp15" />
         </LinearLayout>
     </ScrollView>
 
