--- a/app/src/main/res/layout/item_home_top.xml
+++ b/app/src/main/res/layout/item_home_top.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="260dp"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
@@ -18,13 +19,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_4"
         android:textColor="@color/white"
-        android:textSize="@dimen/sp15" />
+        android:textSize="@dimen/sp16" />
 
     <com.zhy.view.flowlayout.TagFlowLayout
-        android:gravity="center"
         android:id="@+id/flowLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_gravity="center"
-        android:orientation="horizontal" />
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:maxRows="1" />
 </LinearLayout>
