--- a/app/src/main/res/layout/activity_member_detail.xml
+++ b/app/src/main/res/layout/activity_member_detail.xml
@@ -56,14 +56,14 @@
                 android:background="#f6f6f6" />
 
             <LinearLayout
-                android:visibility="gone"
                 android:id="@+id/layoutNickName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:background="@drawable/selector_item_click_bg"
                 android:gravity="center_vertical"
                 android:paddingLeft="@dimen/dp_16"
-                android:paddingRight="@dimen/dp_16">
+                android:paddingRight="@dimen/dp_16"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -395,12 +395,15 @@
                 android:text="保存"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp15" />
+
             <Button
-                android:layout_marginBottom="@dimen/dp_16"
                 android:id="@+id/btnDelete"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/dp_8"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="@dimen/dp_8"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="@dimen/dp_16"
                 android:background="@drawable/shape_unbind_device_bg"
                 android:text="删除"
                 android:textColor="@color/white"
