--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -5,6 +5,13 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@color/appThemeColor"
+        android:visibility="gone" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -123,16 +130,15 @@
 
 
             <View
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginLeft="@dimen/dp_8"
                 android:layout_marginRight="@dimen/dp_8"
-                android:background="#f6f6f6" />
+                android:background="#f6f6f6"
+                android:visibility="gone" />
 
 
             <LinearLayout
-                android:visibility="gone"
                 android:id="@+id/layoutNearby"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -140,7 +146,8 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:paddingLeft="@dimen/dp_8"
-                android:paddingRight="@dimen/dp_8">
+                android:paddingRight="@dimen/dp_8"
+                android:visibility="gone">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -276,6 +283,7 @@
                     android:layout_height="16dp"
                     android:src="@mipmap/icon_right" />
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -315,7 +323,6 @@
             </LinearLayout>
 
             <Button
-                android:visibility="gone"
                 android:id="@+id/btnLogout"
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
@@ -323,7 +330,8 @@
                 android:background="@drawable/shape_button_bg"
                 android:text="退出登录"
                 android:textColor="@color/white"
-                android:textSize="@dimen/sp_16" />
+                android:textSize="@dimen/sp_16"
+                android:visibility="gone" />
         </LinearLayout>
     </ScrollView>
 
