--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -2,8 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:gravity="center"
     android:orientation="vertical">
+
+    <View
+        android:visibility="gone"
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:background="@color/appThemeColor" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,19 +19,19 @@
         android:background="@color/appThemeColor">
 
         <ImageView
-            android:visibility="gone"
             android:id="@+id/ivBack"
-            android:padding="@dimen/dp_8"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_chevron_left_black_36dp" />
+            android:layout_centerVertical="true"
+            android:padding="@dimen/dp_8"
+            android:src="@drawable/ic_chevron_left_black_36dp"
+            android:visibility="gone" />
 
         <TextView
-            android:layout_centerInParent="true"
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="资讯列表"
             android:textColor="@color/white"
             android:textSize="@dimen/sp15" />
